<resources>
    <string name="app_name">HyRay</string>
    <string name="todo">TODO</string>
    <string name="username">\t\tUserName</string>
    <string name="password">\t\tPassword</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="salesman_id">Salesman Code</string>
    <string name="salesman_name">Salesman Name</string>
    <string name="product_ncatalogue">Product Catalogue</string>
    <string name="sales_order">Sales Order</string>
    <string name="order_status">Order Status</string>
    <string name="special_request">Special Request</string>
    <string name="calendor">Calendor</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="quotation">Quotation</string>
    <string name="customer_details">Customer Details</string>
    <string name="customized">Customized</string>
    <string name="home">Home</string>
    <string name="sales_report">Sales Report</string>
    <string name="ar_listing">AR Listing</string>
    <string name="training_deck">Training Deck</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="salesman_code">Salesman Code</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="tel">Tel</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="search">Search Customer</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="add_new_customer">Add New Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_list_is_empty">Customer list is empty</string>
    <string name="a_n_nb_n_nc_n_nd_n_ne_n_nf_n_ng_n_nh_n_ni_n_nj_n_nk_n_nl_n_nm_n_nn_n_no_n_np_n_nq_n_nr_n_ns_n_nt_n_nu_n_nv_n_nw_n_nx_n_ny_n_nz">A  B  C  D  E  F  G  H  I  J  K  L  M  N  O  P  Q  R  S  T  U  V  W  X  Y  Z</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
</resources>
